システム処理機能の追加・変更
2014/11/13 14:28
投稿者 : モリシタ

・GameFontで登録されていないフォントパスをしていすると強制終了するようになっていたので、警告を出すようにした。
・ゲームパッドによる入力も考慮して、入力デバイス全般の処理を受け持つInputクラスを定義、Keyboardを内部クラス化した。
・DxLibのアーカイバ機能にも対応したGameFileReaderクラスを定義した。

--- a/RPGProject/Project1/Project1.csproj
+++ b/RPGProject/Project1/Project1.csproj
@@ -63,11 +63,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Drawer.cs" />
+    <Compile Include="GameFileReader.cs" />
     <Compile Include="GameFont.cs" />
     <Compile Include="GameMain.cs" />
     <Compile Include="GameGraph.cs" />
     <Compile Include="GameSound.cs" />
-    <Compile Include="Keyboard.cs" />
+    <Compile Include="GameInput.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Speaker.cs" />
   </ItemGroup>
