--- a/RPGProject/Project1/RPGProject.csproj
+++ b/RPGProject/Project1/RPGProject.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{CC5096E4-F8D1-40E9-A1B9-32B0483F197D}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Project1</RootNamespace>
-    <AssemblyName>Project1</AssemblyName>
+    <RootNamespace>RPGProject</RootNamespace>
+    <AssemblyName>RPGProject</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -62,15 +62,15 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Drawer.cs" />
-    <Compile Include="GameFileReader.cs" />
-    <Compile Include="GameFont.cs" />
-    <Compile Include="GameMain.cs" />
-    <Compile Include="GameGraph.cs" />
-    <Compile Include="GameSound.cs" />
-    <Compile Include="GameInput.cs" />
+    <Compile Include="GameSystem\Drawer.cs" />
+    <Compile Include="GameSystem\GameFileReader.cs" />
+    <Compile Include="GameSystem\GameFont.cs" />
+    <Compile Include="GameSystem\GameMain.cs" />
+    <Compile Include="GameSystem\GameGraph.cs" />
+    <Compile Include="GameSystem\GameSound.cs" />
+    <Compile Include="GameSystem\GameInput.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Speaker.cs" />
+    <Compile Include="GameSystem\Speaker.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
