--- a/RPGProject/Project1/RPGProject.csproj
+++ b/RPGProject/Project1/RPGProject.csproj
@@ -94,6 +94,12 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="GamePlay\Battle\" />
+    <Folder Include="GamePlay\Database\" />
+    <Folder Include="GamePlay\Map\" />
+    <Folder Include="GamePlay\Window\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
