ドキュメントの追加
2014/11/13 19:40
投稿者 : モリシタ

実装のためのドキュメントを追加した。
・Mapクラス(TN)
・PlayerStatusクラス(T)
・Playerクラス(T)
・Windowクラス(0)

なお、内容はすべてテスト用なので今後内容が書き換わる。

--- a/RPGProject/Project1/RPGProject.csproj
+++ b/RPGProject/Project1/RPGProject.csproj
@@ -98,6 +98,7 @@
     <Folder Include="GamePlay\Battle\" />
     <Folder Include="GamePlay\Database\" />
     <Folder Include="GamePlay\Map\" />
+    <Folder Include="GamePlay\Party\" />
     <Folder Include="GamePlay\Window\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
