gitignoreファイルの更新
2014/11/14 19:48
投稿者 : モリシタ

GameMain.csも内容を無視するように変更。

--- a/RPGProject/Project1/RPGProject.csproj
+++ b/RPGProject/Project1/RPGProject.csproj
@@ -65,7 +65,7 @@
     <Compile Include="GameSystem\Drawer.cs" />
     <Compile Include="GameSystem\GameFileReader.cs" />
     <Compile Include="GameSystem\GameFont.cs" />
-    <Compile Include="GameSystem\GameMain.cs" />
+    <Compile Include="GameMain.cs" />
     <Compile Include="GameSystem\GameGraph.cs" />
     <Compile Include="GameSystem\GameSound.cs" />
     <Compile Include="GameSystem\GameInput.cs" />
