--- a/RPGProject/Project1/RPGProject.csproj
+++ b/RPGProject/Project1/RPGProject.csproj
@@ -62,8 +62,8 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GamePlay\Database\Player.cs" />
-    <Compile Include="GamePlay\Database\PlayerStatus.cs" />
+    <Compile Include="GamePlay\Party\Player.cs" />
+    <Compile Include="GamePlay\Party\PlayerStatus.cs" />
     <Compile Include="GamePlay\Window\Window.cs" />
     <Compile Include="GameSystem\Drawer.cs" />
     <Compile Include="GameSystem\GameFileReader.cs" />
@@ -99,8 +99,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="GamePlay\Battle\" />
+    <Folder Include="GamePlay\Database\" />
     <Folder Include="GamePlay\Map\" />
-    <Folder Include="GamePlay\Party\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
