仕様の更新・設計の追加
2014/11/18 19:29
投稿者 : モリシタ

設計仕様の追加と、戦闘仕様の変更を行った。

--- a/RPGProject/Project1/RPGProject.csproj
+++ b/RPGProject/Project1/RPGProject.csproj
@@ -62,6 +62,7 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GamePlay\Battle\Battle.cs" />
     <Compile Include="GamePlay\Party\Player.cs" />
     <Compile Include="GamePlay\Party\PlayerStatus.cs" />
     <Compile Include="GamePlay\Window\Window.cs" />
@@ -98,7 +99,6 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="GamePlay\Battle\" />
     <Folder Include="GamePlay\Database\" />
     <Folder Include="GamePlay\Map\" />
   </ItemGroup>
