csprojの上げ忘れ
2014/12/10 21:10
ファイルの選択忘れてたので再度コミット

--- a/RPGProject/Project1/RPGProject.csproj
+++ b/RPGProject/Project1/RPGProject.csproj
@@ -64,6 +64,8 @@
   <ItemGroup>
     <Compile Include="GamePlay\Battle\Battle.cs" />
     <Compile Include="GamePlay\FrontEnd\TimeMessage.cs" />
+    <Compile Include="GamePlay\Map\MapMyChar.cs" />
+    <Compile Include="GamePlay\Map\MapChar.cs" />
     <Compile Include="GamePlay\Map\Map.cs" />
     <Compile Include="GamePlay\Party\Party.cs" />
     <Compile Include="GamePlay\Party\Player.cs" />
