csprojの上げ忘れ
2014/12/11 20:37
投稿者 : モリシタ

意図せず同じミスをした

--- a/RPGProject/Project1/RPGProject.csproj
+++ b/RPGProject/Project1/RPGProject.csproj
@@ -105,6 +105,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="GamePlay\Control\" />
     <Folder Include="GamePlay\Database\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
