Party関係の設計追加
2015/01/13 19:08
投稿者 : モリシタ

・Partyの設計追加
・PlayerをPlayerUnitに変更

--- a/RPGProject/Project1/RPGProject.csproj
+++ b/RPGProject/Project1/RPGProject.csproj
@@ -108,6 +108,7 @@
   <ItemGroup>
     <Folder Include="GamePlay\Control\" />
     <Folder Include="GamePlay\Database\" />
+    <Folder Include="GamePlay\Party\Item\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
