--- a/RPGProject/Project1/RPGProject.csproj
+++ b/RPGProject/Project1/RPGProject.csproj
@@ -63,6 +63,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GamePlay\Battle\Battle.cs" />
+    <Compile Include="GamePlay\Battle\BattleUnit\BattleEnemy.cs" />
+    <Compile Include="GamePlay\Battle\BattleUnit\BattlePlayer.cs" />
+    <Compile Include="GamePlay\Battle\BattleUnit\BattleUnit.cs" />
+    <Compile Include="GamePlay\Battle\OrderMake\BattleOrder.cs" />
+    <Compile Include="GamePlay\Battle\OrderMake\OrderMaker.cs" />
+    <Compile Include="GamePlay\Battle\OrderMake\PlayerOrderMaker.cs" />
     <Compile Include="GamePlay\FrontEnd\TimeMessage.cs" />
     <Compile Include="GamePlay\Map\MapMyChar.cs" />
     <Compile Include="GamePlay\Map\MapChar.cs" />
