Battle関係の実そう
2015/01/15 2:52
投稿者 : モリシタ

・ダミークラスを組み合わせて処理の流れを記述した
・行動とターゲットを選択してオーダーに記録するようにした
NEXT>>オーダーを実際に解釈して攻撃できるようにする

--- a/RPGProject/Project1/RPGProject.csproj
+++ b/RPGProject/Project1/RPGProject.csproj
@@ -66,7 +66,8 @@
     <Compile Include="GamePlay\Battle\BattleUnit\BattleEnemy.cs" />
     <Compile Include="GamePlay\Battle\BattleUnit\BattlePlayer.cs" />
     <Compile Include="GamePlay\Battle\BattleUnit\BattleUnit.cs" />
-    <Compile Include="GamePlay\Battle\OrderMake\BattleOrder.cs" />
+    <Compile Include="GamePlay\Battle\OrderExecute\OrderExecuter.cs" />
+    <Compile Include="GamePlay\Battle\BattleOrder.cs" />
     <Compile Include="GamePlay\Battle\OrderMake\OrderMaker.cs" />
     <Compile Include="GamePlay\Battle\OrderMake\PlayerOrderMaker.cs" />
     <Compile Include="GamePlay\FrontEnd\TimeMessage.cs" />
