Battle関係の実そう３
2015/01/16 3:40
投稿者 : モリシタ

・さらに複雑化した
・述語とかListとかStackとかReadonlyCorrectionとか
NEXT>>まずアクションデータに命中率を入れよう（提案）

--- a/RPGProject/Project1/RPGProject.csproj
+++ b/RPGProject/Project1/RPGProject.csproj
@@ -67,6 +67,8 @@
     <Compile Include="GamePlay\Battle\BattleUnits\BattleEnemy.cs" />
     <Compile Include="GamePlay\Battle\BattleUnits\BattlePlayer.cs" />
     <Compile Include="GamePlay\Battle\BattleUnits\BattleUnit.cs" />
+    <Compile Include="GamePlay\Battle\OrderExecute\ActionCalculator.cs" />
+    <Compile Include="GamePlay\Battle\OrderExecute\ActionExecuter.cs" />
     <Compile Include="GamePlay\Battle\OrderExecute\OrderExecuter.cs" />
     <Compile Include="GamePlay\Battle\BattleOrder.cs" />
     <Compile Include="GamePlay\Battle\OrderMake\OrderMaker.cs" />
