Battle関係の実そう７
2015/01/20 20:28
投稿者 : モリシタ

・状態異常の追加

--- a/RPGProject/Project1/RPGProject.csproj
+++ b/RPGProject/Project1/RPGProject.csproj
@@ -65,6 +65,7 @@
     <Compile Include="GameMath.cs" />
     <Compile Include="GamePlay\Battle\Battle.cs" />
     <Compile Include="GamePlay\Battle\BattleAction.cs" />
+    <Compile Include="GamePlay\Battle\BattleUnits\BattleBadStatus.cs" />
     <Compile Include="GamePlay\Battle\BattleUnits\BattleEnemy.cs" />
     <Compile Include="GamePlay\Battle\BattleUnits\BattlePlayer.cs" />
     <Compile Include="GamePlay\Battle\BattleUnits\BattleUnit.cs" />
