--- a/RPGProject/Project1/RPGProject.csproj
+++ b/RPGProject/Project1/RPGProject.csproj
@@ -85,8 +85,8 @@
     <Compile Include="GamePlay\Map\Map.cs" />
     <Compile Include="GamePlay\Party\FlagMgr.cs" />
     <Compile Include="GamePlay\Party\Party.cs" />
-    <Compile Include="GamePlay\Party\Player.cs" />
-    <Compile Include="GamePlay\Party\PlayerStatus.cs" />
+    <Compile Include="GamePlay\Party\PlayerUnit.cs" />
+    <Compile Include="GamePlay\Party\PlayerUnitStatus.cs" />
     <Compile Include="GamePlay\Window\MessageWindow.cs" />
     <Compile Include="GamePlay\Window\WindowMgr.cs" />    
     <Compile Include="GamePlay\Window\Window.cs" />
