FPS計測の実装
2015/05/29
投稿者 : モリシタ

FPS計測処理の実装。
以降、FPSは画面左上に描画されます。
60が正常値です。

--- a/RPGProject/Project1/RPGProject.csproj
+++ b/RPGProject/Project1/RPGProject.csproj
@@ -80,6 +80,7 @@
     <Compile Include="GamePlay\Battle\OrderMake\OrderMaker.cs" />
     <Compile Include="GamePlay\Battle\OrderMake\PlayerOrderMaker.cs" />
     <Compile Include="GamePlay\Database\BattleActionDatabase.cs" />
+    <Compile Include="FPS.cs" />
     <Compile Include="GamePlay\FrontEnd\TimeMessage.cs" />
     <Compile Include="GamePlay\GamePlayMain.cs" />
     <Compile Include="GamePlay\Map\MapNPChar.cs" />
